Fix dark mode

--- a/frontend-quiz-app/src/components/Home/Home.css
+++ b/frontend-quiz-app/src/components/Home/Home.css
@@ -18,3 +18,9 @@
     font-style: italic;
     margin-block-end: 2rem;
 }
+
+body[data-theme='dark']{
+    .home .title{
+        color: var(--white);
+    }
+}
