--- a/frontend-quiz-app/src/components/Quizz/Quiz.css
+++ b/frontend-quiz-app/src/components/Quizz/Quiz.css
@@ -35,11 +35,12 @@
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    background-color: var(--white);
+    background-color: var(--card-bg-color);
     padding: 1rem;
     border-radius: 0.5rem;
     width: 100%;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 /* .quizz-container .options .option .answers:hover{
