--- a/frontend-quiz-app/src/components/Subject/Subjects.css
+++ b/frontend-quiz-app/src/components/Subject/Subjects.css
@@ -11,7 +11,7 @@
     align-items: center;
     padding: 1rem;
     gap: 1rem;
-    background-color: var(--white);
+    background-color: var(--card-bg-color);
     border-radius: 0.5rem;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
